--- a/config/database.yml
+++ b/config/database.yml
@@ -10,23 +10,24 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8mb4
+  adapter: postgresql
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
+  username: FurimaSearch
   password:
-  socket: /tmp/mysql.sock
+  # socket: /tmp/mysql.sock
+  lolachost: localhost
 
 development:
   <<: *default
-  database: furima_search_development
+  database: FurimaSearch_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: furima_search_test
+  database: FurimaSearch_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +50,6 @@ test:
 #
 production:
   <<: *default
-  database: furima_search_production
-  username: furima_search
+  # database: FurimaSearch_production
+  # username: FurimaSearch
   password: <%= ENV['FURIMA_SEARCH_DATABASE_PASSWORD'] %>
