--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.8.0"
+  },
+  "resolutions": {
+    "**/**/fsevents": "^2.1.2"
   }
 }
